completed styling of the array of images returned from the api

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,8 +4,22 @@
     
 }
 
+.app__image-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
 .app__image {
     margin: auto;
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: auto;
+    padding: 0;
+}
+
+.app__text {
+    margin: auto;
+    height: 30px;
+    font-weight: bold;
 }
